[package]
name = "n3-parser"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Super-Simple semantic neural network model parser."
homepage = "https://github.com/podo-os"
readme = "README.md"
license = "BSD-3-Clause"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.18"

[dependencies]
lalrpop-util = "0.18"
log = "0.4"
num-traits = "0.2"
unic-emoji-char = "0.9"
unic-ucd-ident = "0.9"
wtf8 = "0.0.3"
